# nsx-core

./: CHANGELOG.md  CMakeLists.txt  README.md  nsx-module.yaml  release-please-config.json
.github/workflows/: release.yml
includes-api/: ns_core.h  nsx_compiler.h  nsx_mem.h  nsx_system.h
src/: ns_core.c  nsx_system.c
src/apollo3/: startup_gcc.c
src/apollo3/gcc/: startup_gcc.c
src/apollo330P/gcc/: startup_gcc.c
src/apollo3p/: nsx_system_platform.c
src/apollo3p/gcc/: startup_gcc.c
src/apollo4l/armclang/: linker_script.sct
src/apollo4l/gcc/: startup_gcc.c
src/apollo4p/: nsx_system_platform.c
src/apollo4p/armclang/: linker_script.sct
src/apollo4p/gcc/: startup_gcc.c
src/apollo510/: nsx_system_platform.c
src/apollo510/armclang/: linker_script_sbl.sct
src/apollo510/gcc/: linker_script_itcm_sbl.ld  linker_script_nbl.ld  linker_script_sbl.ld  startup_gcc.c
src/apollo510L/: startup_new.c.dnc
src/apollo510L/armclang/: linker_script_itcm_sbl.sct  linker_script_nbl.sct  linker_script_sbl.sct
src/apollo510L/gcc/: startup_gcc.c
src/apollo510b/armclang/: linker_script_sbl.sct
src/apollo510b/gcc/: startup_gcc.c
src/apollo5a/armclang/: linker_script_nbl.sct  linker_script_sbl.sct
src/apollo5a/gcc/: startup_gcc.c
src/apollo5a/llvm/: startup_clang.c
src/apollo5b/gcc/: startup_gcc.c
